umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_jmol_cyclooctatetraene.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 16
bond_count: 16
sum_formula: C8H8
graph6: OD@JA?_C?O?_?_a???K??
