umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_jmol_feroce18.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 21
bond_count: 30
sum_formula: C10H10Fe
graph6: T|fKCE@_KCg?G?C?@??G??_?@??@???_??G?
