umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_jmol_nelmum.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 68
bond_count: 72
sum_formula: C20H40I2O5Yb
graph6: ~?@Cs__GGC?G@A??@?@??_?@??G??_??G??GO?C???G??@@??????@???@????_???@????G????_????G????GG???C?????G????@O??????G????G?????_?????G?????A??????_?????AC?????????????C??????@???????O??????A???????@???????A???????A????????G???????A???????_O????????G????????S?????????????????@?????????G????????@?????????C?????????@?????????@??????????_?????????@??????????G????????@?_??????????G??????????G
