umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_jmol_soqtoh.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 28
bond_count: 32
sum_formula: C10H15NNiO
graph6: "[keKKcO?G@?CA???_?O?C@????G??O??OA?????G??@???C?O??????_???O???C"
