umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_jmol_trans-cyclooctene.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 22
bond_count: 22
sum_formula: C8H14
graph6: UiCO_CA?G@?@?A?A??G?A??O??G??Q??O??@???O
